--- a/css/estilos.css
+++ b/css/estilos.css
@@ -34,23 +34,22 @@ header .contenedor{
     height: 700px;
 }
 
-header .menu{
+header .navbar {
+    background-color: transparent !important;     
+  }
+
+header .navbar .nav-link{
+    color: white !important;
+}
+
+header .contenedor-toggle{
+    display: flex;
     width: 100%;
-    text-align: right;
+    justify-content: right;
 }
 
-header .menu a{
-    color: #fff;
-    font-size: 20px;
-    font-weight: 300;
-    display: inline-block; /*Investigar esta propiedad*/
-    margin: 40px 20px;
-    text-decoration: none;
-    position: relative;
-}
-
-header .menu a:hover{
-    text-decoration: underline;
+header .navbar-dark .navbar-toggler{
+    border: 0;
 }
 
 header .textos{
