--- a/css/estilos.css
+++ b/css/estilos.css
@@ -52,20 +52,10 @@ header .navbar-dark .navbar-toggler{
     border: 0;
 }
 
-header .menu a{
-    color: #fff;
-    font-size: 20px;
-    font-weight: 300;
-    display: inline-block; /*Investigar esta propiedad*/
-    margin: 40px 20px;
-    text-decoration: none;
-    position: relative;
+header li a{
+    width: 100px;
+    margin-left: 20px;
 }
-
-header .menu a:hover{
-    text-decoration: underline;
-}
-
 
 header .textos{
     width: 100%;
@@ -503,7 +493,8 @@ footer .copyright{
 @media screen and (max-width: 820px) {
     header .contenedor{
         position: static;
-        height: 250px;
+        height: auto;        
+        padding-bottom: 25px;
     }
 
     header .textos{
