--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,7 +19,7 @@ body{
 /*------------------ HEADER ----------------------*/
 
 header{
-    background: url('../img/bg.jpg') #fff;
+    background: url('../img/bg.png') #fff;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -95,6 +95,8 @@ header .contenedor-texto .text .profesion{
 .main .acerca-de .foto img{
     vertical-align: top;
     border-radius: 50%;
+    width: 200px;
+    height: 200px;
     border: 5px solid rgba(255, 255, 255, 0.2);
 }
 
@@ -105,6 +107,7 @@ header .contenedor-texto .text .profesion{
     line-height: 30px;
     width: 80%;
     margin: 40px auto 60px auto;
+    text-align: justify;
 }
 
 .main .acerca-de .texto .titulo{
@@ -230,7 +233,7 @@ footer .redes-sociales a{
 
 footer .redes-sociales .facebook:hover {background-color: #3b5998; border-radius: 15px;}
 footer .redes-sociales .github:hover {background-color: #666666; border-radius: 15px;}
-footer .redes-sociales .instagram:hover {background-color: #3f729b; border-radius: 15px;}
+footer .redes-sociales .instagram:hover {background-color: #eb30d2; border-radius: 15px;}
 
 /*----------------- MEDIA QUERIES --------------------*/
 
